feat(profile): can update and delete profiles, TEST-005
